--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
 		"dev": "ts-node-dev --watch --respawn --exit-child --transpile-only  src/server.ts"
 	},
 	"devDependencies": {
-		"@types/adm-zip": "^0.5.0",
 		"@types/express": "^4.17.13",
+		"@types/jszip": "^3.4.1",
 		"@types/multer": "^1.4.7",
-		"adm-zip": "^0.5.9",
 		"express": "^4.18.1",
+		"jszip": "^3.10.1",
 		"multer": "^1.4.5-lts.1",
 		"ts-node": "^10.9.1",
 		"ts-node-dev": "^2.0.0",
