--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
 		"dev": "ts-node-dev --watch --respawn --exit-child --transpile-only  src/server.ts"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jszip": "^3.4.1",
 		"@types/multer": "^1.4.7",
@@ -19,5 +20,7 @@
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.7.4"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"cors": "^2.8.5"
+	}
 }
