--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,31 @@
 {
-	"name": "csv2json",
-	"version": "1.0.0",
-	"main": "index.js",
-	"repository": "git@github.com:giovannijanial/csv2json.git",
-	"author": "Giovanni Janial <giovannijanial@gmail.com>",
-	"license": "MIT",
-	"scripts": {
-		"dev": "ts-node-dev --watch --respawn --exit-child --transpile-only  src/server.ts"
-	},
-	"devDependencies": {
-		"@types/cors": "^2.8.12",
-		"@types/express": "^4.17.13",
-		"@types/jszip": "^3.4.1",
-		"@types/multer": "^1.4.7",
-		"express": "^4.18.1",
-		"jszip": "^3.10.1",
-		"multer": "^1.4.5-lts.1",
-		"ts-node": "^10.9.1",
-		"ts-node-dev": "^2.0.0",
-		"typescript": "^4.7.4"
-	},
-	"dependencies": {
-		"cors": "^2.8.5"
-	}
+  "name": "csv2json",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:giovannijanial/csv2json.git",
+  "author": "Giovanni Janial <giovannijanial@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --watch --respawn --exit-child --transpile-only  src/server.ts",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.7",
+    "@types/jszip": "^3.4.1",
+    "@types/multer": "^1.4.7",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "jest": "^28.1.3",
+    "jszip": "^3.10.1",
+    "multer": "^1.4.5-lts.1",
+    "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "cors": "^2.8.5"
+  }
 }
